#101 :bug: fix distorted logo on some pages

--- a/wp-content/themes/fxprotools-theme/assets/sass/module-styles/_navigation.scss
+++ b/wp-content/themes/fxprotools-theme/assets/sass/module-styles/_navigation.scss
@@ -65,6 +65,7 @@
 			margin-top: 30px;
 			width: 150px;
 			height: auto;
+			max-height: none;
 		}
 	}
 }
